Bug#7943: Wrong prefix lengths reported on UTF-8 columns SHOW KEYS FROM t1 now displays number of characters in Sub_part, not number of bytes, to be compatible with SHOW CREATE TABLE.